--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"next-themes": "^0.3.0",
 		"react": "^18",
 		"react-dom": "^18",
-		"react-icons": "^5.1.0"
+		"react-icons": "^5.1.0",
+		"react-reveal": "^1.2.2"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
