--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
 		"next-themes": "^0.3.0",
 		"react": "^18",
 		"react-dom": "^18",
-		"react-icons": "^5.1.0",
-		"react-reveal": "^1.2.2"
+		"react-icons": "^5.1.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
